# lab06

./: CMakeLists.txt  CPackConfig.cmake  DESCRIPTION  LICENSE
.github/workflows/: release.yml
formatter_ex/: CMakeFiles.txt  CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
